@@ -36,7 +36,7 @@ Dist::Zilla::Plugin::Test::PodSpelling = 2.006003
 Dist::Zilla::Plugin::Test::Pod::No404s = 1.002
 Dist::Zilla::Plugin::Test::Kwalitee = 2.10
 Dist::Zilla::Plugin::MojibakeTests = 0.8
-Dist::Zilla::Plugin::Test::ReportPrereqs = 0.019
+Dist::Zilla::Plugin::Test::ReportPrereqs = 0.022
 Dist::Zilla::Plugin::Test::Portability = 0
 Dist::Zilla::Plugin::Test::CleanNamespaces = 0.006
 Dist::Zilla::Plugin::PruneCruft = 0
